--- a/package.json
+++ b/package.json
@@ -31,17 +31,14 @@
     "docs": "build-storybook -o docs"
   },
   "dependencies": {
-    "classnames": "^2.2.5"
+    "classnames": "^2.2.5",
+    "element-resize-detector": "^1.1.10",
+    "random-words": "^0.0.1"
   },
   "peerDependencies": {
     "react": "^15.3.1"
   },
   "devDependencies": {
-    "react": "^15.4.1",
-    "react-dom": "^15.4.1",
-    "github-markdown-css": "^2.4.1",
-    "html-loader": "^0.4.4",
-    "markdown-loader": "^0.1.7",
     "@kadira/storybook": "^2.35.1",
     "babel-cli": "^6.18.0",
     "babel-eslint": "^7.1.1",
@@ -51,9 +48,14 @@
     "babel-preset-stage-2": "^6.13.0",
     "babelify": "^7.3.0",
     "browserify": "^13.1.0",
+    "github-markdown-css": "^2.4.1",
+    "html-loader": "^0.4.4",
+    "markdown-loader": "^0.1.7",
     "nib": "^1.1.2",
     "npm-run-all": "^3.1.1",
     "onchange": "^3.0.2",
+    "react": "^15.4.1",
+    "react-dom": "^15.4.1",
     "standard": "^8.0.0",
     "stylus": "^0.54.5",
     "uglifyify": "^3.0.3"
